--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "kevin-hierro",
+  "name": "factorial-playwright-automation",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {},
   "keywords": [],
-  "author": "",
+  "author": "Kevin Hierro Carrasco",
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.41.2",
