🔧 add cron to execute the task in github

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,9 @@
 name: Playwright Tests
+
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+  schedule:
+    - cron: '0 7 * * 1-5' # Ejecuta a las 7 AM UTC de lunes a viernes
+
 jobs:
   test:
     timeout-minutes: 60
