--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.41.2",
-    "@types/node": "^20.11.16"
+    "@types/node": "^20.11.16",
+    "dotenv": "^16.4.1"
   }
 }
